@@ -7,6 +7,8 @@ cdebconf (0.75) UNRELEASED; urgency=low
       installer, such as rescue mode.
     - Fix text frontend segfault when encountering empty elements in Choices
       field (closes: #256557).
+    - Fix memory leaks in METAGET, PROGRESS, SETTITLE, and X_SETBACKTITLE
+      commands.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 22:51:59 +0000
 
